<resources>
    <string name="app_name">instaland</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>