<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/icon1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/icon2"
        android:enabled="true"
        android:icon="@drawable/broadcast"
        android:title="@string/notification"/>

    <item
        android:id="@+id/icon3"
        android:enabled="true"
        android:icon="@drawable/plus"
        android:title="@string/add"/>

    <item
        android:id="@+id/icon4"
        android:enabled="true"
        android:icon="@drawable/ribbon"
        android:title="@string/search"/>

    <item
        android:id="@+id/icon5"
        android:enabled="true"
        android:icon="@drawable/sent"
        android:title="@string/profile"/>

</menu>